; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/display_servers/extr_dispserv_x11.c_x11_display_server_set_window_opacity.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/display_servers/extr_dispserv_x11.c_x11_display_server_set_window_opacity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@g_x11_dpy = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"_NET_WM_WINDOW_OPACITY\00", align 1
@False = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"CARDINAL\00", align 1
@g_x11_win = common dso_local global i32 0, align 4
@PropModeReplace = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @x11_display_server_set_window_opacity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @x11_display_server_set_window_opacity(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_2__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %9, %struct.TYPE_2__** %5, align 8
  %10 = load i32, i32* @g_x11_dpy, align 4
  %11 = load i32, i32* @False, align 4
  %12 = call i32 @XInternAtom(i32 %10, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* @g_x11_dpy, align 4
  %14 = load i32, i32* @False, align 4
  %15 = call i32 @XInternAtom(i32 %13, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* %4, align 4
  %20 = uitofp i32 %19 to double
  %21 = fmul double %20, 0x41847AE14799999A
  %22 = fptoui double %21 to i32
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* %4, align 4
  %24 = icmp eq i32 %23, -1
  br i1 %24, label %25, label %30

25:                                               ; preds = %2
  %26 = load i32, i32* @g_x11_dpy, align 4
  %27 = load i32, i32* @g_x11_win, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @XDeleteProperty(i32 %26, i32 %27, i32 %28)
  br label %38

30:                                               ; preds = %2
  %31 = load i32, i32* @g_x11_dpy, align 4
  %32 = load i32, i32* @g_x11_win, align 4
  %33 = load i32, i32* %6, align 4
  %34 = load i32, i32* %7, align 4
  %35 = load i32, i32* @PropModeReplace, align 4
  %36 = bitcast i32* %4 to i8*
  %37 = call i32 @XChangeProperty(i32 %31, i32 %32, i32 %33, i32 %34, i32 32, i32 %35, i8* %36, i32 1)
  br label %38

38:                                               ; preds = %30, %25
  ret i32 1
}

declare dso_local i32 @XInternAtom(i32, i8*, i32) #1

declare dso_local i32 @XDeleteProperty(i32, i32, i32) #1

declare dso_local i32 @XChangeProperty(i32, i32, i32, i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
